tests/ui/regions/region-object-lifetime-5.stderr
error[E0515]: cannot return value referencing local data `*x`
  --> $DIR/region-object-lifetime-5.rs:11:5
   |
LL |     x.borrowed()
   |     -^^^^^^^^^^^
   |     |
   |     returns a value referencing data owned by the current function
   |     `*x` is borrowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
